docs/book/samples/ch06/bare_check.out
error[unused]: unused expression: every non-final line binds a name (sequence effects with `>>`)
  --> bare_check.kso:1:3
   1 | 1 + 1
         ^
