docs/book/samples/ch06/bare_check.kso
1 + 1
print "the sum above went nowhere"
